--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Day 2 Takehome</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+  <div class="container-fluid">
+    <div class="col-md-12 header">
+    </div>
+    <div class="col-md-12 nav">
+    </div>
+    <div class="col-md-9 content">
+    </div>
+    <div class="col-md-3 aside">
+    </div>
+    <div class="col-md-3 promo"></div>
+    <div class="col-md-3 promo"></div>
+    <div class="col-md-3 promo"></div>
+    <div class="col-md-3 promo"></div>
+    <div class="col-md-12 footer">
+    </div>
+  </div>
 </body>
 </html>
